// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > ArrowBack 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clip-path="url(#clip0_6_2171)"
  >
    <path
      d="M17.5098 3.86961L15.7298 2.09961L5.83984 11.9996L15.7398 21.8996L17.5098 20.1296L9.37984 11.9996L17.5098 3.86961Z"
      fill="inherit"
    />
  </g>
  <defs>
    <clippath
      id="clip0_6_2171"
    >
      <rect
        fill="white"
        height="24"
        width="24"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > ArrowDown 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17.8352 9.16475C17.6355 8.96505 17.323 8.9469 17.1028 9.11029L17.0398 9.16475L12.1875 14.0168L7.33525 9.16475C7.13555 8.96505 6.82305 8.9469 6.60284 9.11029L6.53975 9.16475C6.34005 9.36445 6.3219 9.67695 6.48529 9.89716L6.53975 9.96025L11.7898 15.2102C11.9895 15.4099 12.302 15.4281 12.5222 15.2647L12.5852 15.2102L17.8352 9.96025C18.0549 9.74058 18.0549 9.38442 17.8352 9.16475Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > ArrowLeft 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  transform="scale(-1 1)"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clip-path="url(#clip0_6_2168)"
  >
    <path
      d="M10 6L8.59 7.41L13.17 12L8.59 16.59L10 18L16 12L10 6Z"
      fill="inherit"
    />
  </g>
  <defs>
    <clippath
      id="clip0_6_2168"
    >
      <rect
        fill="white"
        height="24"
        width="24"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > ArrowRight 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clip-path="url(#clip0_6_2168)"
  >
    <path
      d="M10 6L8.59 7.41L13.17 12L8.59 16.59L10 18L16 12L10 6Z"
      fill="inherit"
    />
  </g>
  <defs>
    <clippath
      id="clip0_6_2168"
    >
      <rect
        fill="white"
        height="24"
        width="24"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > Cancel 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > CarbonSearch 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21.75 20.6895L16.086 15.0255C17.4471 13.3914 18.1258 11.2956 17.981 9.17389C17.8362 7.05219 16.8789 5.06801 15.3084 3.6341C13.7379 2.2002 11.6751 1.42697 9.54896 1.47528C7.42288 1.52359 5.39726 2.38971 3.8935 3.89347C2.38974 5.39723 1.52362 7.42284 1.47531 9.54893C1.427 11.675 2.20023 13.7379 3.63413 15.3084C5.06804 16.8789 7.05222 17.8361 9.17392 17.981C11.2956 18.1258 13.3915 17.4471 15.0255 16.086L20.6895 21.75L21.75 20.6895ZM3 9.74996C3 8.41494 3.39588 7.1099 4.13758 5.99987C4.87928 4.88983 5.93348 4.02467 7.16688 3.51378C8.40028 3.00289 9.75748 2.86921 11.0669 3.12966C12.3762 3.39011 13.579 4.03299 14.523 4.97699C15.467 5.921 16.1098 7.12373 16.3703 8.4331C16.6307 9.74248 16.4971 11.0997 15.9862 12.3331C15.4753 13.5665 14.6101 14.6207 13.5001 15.3624C12.3901 16.1041 11.085 16.5 9.75 16.5C7.96039 16.498 6.24466 15.7862 4.97922 14.5207C3.71378 13.2553 3.00198 11.5396 3 9.74996Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > Check 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M9.7 18.025L4 12.325L5.425 10.9L9.7 15.175L18.875 6L20.3 7.425L9.7 18.025Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > InfoOutline 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M11 17H13V11H11V17ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM11 9H13V7H11V9Z"
    fill="inherit"
  />
  <path
    d="M11 7H13V9H11V7ZM11 11H13V17H11V11Z"
    fill="inherit"
  />
  <path
    d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > Link 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clip-path="url(#clip0_6_2176)"
  >
    <path
      d="M17 7H13V9H17C18.65 9 20 10.35 20 12C20 13.65 18.65 15 17 15H13V17H17C19.76 17 22 14.76 22 12C22 9.24 19.76 7 17 7ZM11 15H7C5.35 15 4 13.65 4 12C4 10.35 5.35 9 7 9H11V7H7C4.24 7 2 9.24 2 12C2 14.76 4.24 17 7 17H11V15ZM8 11H16V13H8V11ZM17 7H13V9H17C18.65 9 20 10.35 20 12C20 13.65 18.65 15 17 15H13V17H17C19.76 17 22 14.76 22 12C22 9.24 19.76 7 17 7ZM11 15H7C5.35 15 4 13.65 4 12C4 10.35 5.35 9 7 9H11V7H7C4.24 7 2 9.24 2 12C2 14.76 4.24 17 7 17H11V15ZM8 11H16V13H8V11Z"
      fill="inherit"
    />
  </g>
  <defs>
    <clippath
      id="clip0_6_2176"
    >
      <rect
        fill="white"
        height="24"
        width="24"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > Plus 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z"
    fill="inherit"
  />
</svg>
`;
